# Claudius

./: LICENSE  README.md  claudius.opam  dune-project
.github/workflows/: main.yml
claudius/: base.ml  base.mli  dune  font.ml  font.mli  framebuffer.ml  palette.mli  screen.mli
day1/: dune-project
day1/lib/: dune  palette.ml  tcc.ml
day2/: dune-project
day2/lib/: framebuffer.mli  palette.ml  palette.mli  primatives.mli  tcc.mli
doc/: index.mld
examples/day10/: dune-project
examples/day11/: dune-project
examples/day112/: dune-project
examples/day12/: dune-project
examples/day17/: dune-project
examples/day17filled/: dune-project
examples/day18/: dune-project
examples/day20/: dune-project
examples/day4/: dune-project
examples/day5/: dune-project
examples/day6/: dune-project
examples/day8/: dune-project
examples/dsotm/: dune-project
examples/fern/: dune-project
examples/flocking/: dune-project
examples/fonts/: dune-project
examples/funocaml/: dune-project  funocaml.opam
examples/keytest/: dune-project
examples/koch/: dune-project
examples/kochtoo/: dune-project
examples/triangles/: dune-project
examples/triangles/lib/: dune
examples/triangles/test/: dune
lib/: base.ml  dune  font.mli  framebuffer.ml  framebuffer.mli  palette.ml  palette.mli  primitives.ml  primitives.mli  screen.ml  screen.mli  tcc.ml  tcc.mli
src/: base.ml  base.mli  font.mli  framebuffer.ml  framebuffer.mli  palette.ml  palette.mli  screen.ml  screen.mli
test/: dune  test_framebuffer.ml  test_palette.ml  test_primitives.ml  test_screen.ml
(+65 files in other folders)
